<resources>
    <string name="app_name">Login Mvvm</string>
    <string name="app_description">Desenvolvido em Kotlin</string>

    <string name="title_signin">Acesso</string>
    <string name="title_signup">Cadastro</string>
    <string name="title_tab_signin">Acessar</string>
    <string name="title_tab_signup">Cadastrar</string>
    <string name="title_home">Home</string>
    <string name="title_select_an_option">Selecione uma opção:</string>

    <string name="hint_email">E-mail</string>
    <string name="hint_password">Senha</string>
    <string name="hint_confirm_password">Confirme a senha</string>
    <string name="hint_name">Nome</string>
    <string name="hint_phone">Telefone celular</string>
    <string name="hint_birthday">Data de nascimento</string>

    <string name="txt_keep_logged">continuar conectado</string>
    <string name="txt_saudation">Seja bem vindo!</string>
    <string name="txt_info_signin">Informe seu e-mail e senha para acessar à sua área.</string>
    <string name="txt_info_signup">Informe seus dados para se cadastrar.</string>

    <string name="s_name">Nome: %s</string>
    <string name="s_birthdate">Data de nascimento: %s</string>
    <string name="s_phone">Telefone: %s</string>
    <string name="s_email">E-mail: %s</string>
    <string name="s_type">Tipo de cliente: %s</string>

    <string name="act_enter">Entrar</string>
    <string name="act_out">Sair</string>
    <string name="act_register">Cadastrar</string>
    <string name="act_ok">OK</string>

    <string name="msg_invalid_field">Campo inválido</string>
    <string name="msg_different_password">As senhas devem ser iguais</string>
    <string name="msg_invalid_password">A senha deve ter de 6 a 12 caracteres</string>
    <string name="msg_error_generic">Ops! Ocorreu um erro inesperado, tente novamente mais tarde, por favor!</string>
    <string name="msg_error_network">Ops! Ocorreu um erro na rede, por favor, verifique sua conexão!</string>
    <string name="msg_error_user_not_found">Usuário ou senha inválido</string>
    <string name="msg_error_user_exists">E-mail já registrado. Informe outro e-mail, por favor!</string>

    <string name="digits_texts">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZÁáÂâÃãÀàÇçÉéÊêÍíÓóÔôÕõÚú.</string>
</resources>